--- a/styles/g3style.css
+++ b/styles/g3style.css
@@ -7,3 +7,85 @@
   font-weight: 400;
   font-style: normal;
 }
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+/* dark 02 */
+.text-gray{
+    color: #424242;
+}
+/* dark 03 */
+.text-light-gray{
+    color: #727272;
+}
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary{
+    font-size: 1.5rem;
+    font-weight: 600;
+    background-color: rgba(255, 144, 14, 1);
+    padding: 20px 25px;
+    color: white;
+    border: none;
+    border-radius: 8px;
+}
+
+/* header styles */
+
+/* navbar related style */
+
+.navbar{
+   justify-content: space-between;
+   align-items: center;
+}
+.brand{
+    font-size: 3rem;
+    font-weight: bold;
+    color: rgba(19, 19, 19, 1);
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+}
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* banner related style */
+
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-size: 4rem;
+    font-weight: 700;
+    color: rgba(19, 19, 19, 1);
+}
+.banner-description{
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgba(114, 114, 114, 1);
+}
+.banner-image{
+    width: 100%;
+}
+
+/* responsive media query */
+@media screen and (max-width: 576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+    
+    
+}
